Bug 429007 - Presenting a 12 hour event like it is 15 min
Summary: Presenting a 12 hour event like it is 15 min
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: timezones (other bugs)
Version First Reported In: 5.15.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-12 11:04 UTC by ahangarha
Modified: 2020-12-12 21:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ahangarha 2020-11-12 11:04:07 UTC
SUMMARY
I am currently in Kabul and the app's timezone is set to Kabul. I added an event for 8am to 8pm UTC but the app shows it like it is 40 min!

STEPS TO REPRODUCE
1. Set app default timezone to Kabul
2. make event with UTC timing

OBSERVED RESULT
The app shows the event in a narrow line as if it is 15 min long

EXPECTED RESULT
a 12 hour event to be shown

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 20.04
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
You might want to check it your self. This is the link to the calendar:
https://emma.cloud.tabdigital.eu/apps/calendar/p/YgcX6754ZkdLWbjQ
Comment 1 gjditchfield 2020-11-12 17:11:49 UTC
Interesting.  Could you use akonadiconsole to look at the event?  You should see your Nextcloud calendar on akonadiconsole's "Browser" tab.  If you select it you should see its events, and you can choose "Calendar/Tasks" as the model to view them with.  Does it display the event's start time and end time as 8am—8pm, or as incorrect times?
Comment 2 ahangarha 2020-11-19 07:02:57 UTC
I have removed the event but I could see it on Nextcloud calendar.

I will try it with a different calendar and see if I can reproduce it again.
Comment 3 Bug Janitor Service 2020-12-04 04:34:19 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 4 gjditchfield 2020-12-08 01:14:40 UTC
- created a free account at Tab Digital
- set time zone to Kabul in System Settings
- my locale is en_CA
- added Tab Digital personal calendar to KOrganizer
- used KOrganizer to create an event, 8:00 AM -- 8:00 PM UTC
- Agenda view shows it as a minimum-height box at 12:30 PM
- Edit dialog shows start and end times as 8:00 AM -- 8:00 PM UTC
- "Show" dialog says Time: 12:30, Duration: 12 hours
- tool tip says From: 2020-12-08, To: 2020-12-09 (note: no times), Duration: 12 hours
 - Tab Digital web interface and akonadiconsole both show it as 8:00 AM -- 8:00 PM UTC

5.15.3 (20.08.3)
KDE Frameworks 5.76.0
Qt 5.15.2 (built against 5.15.1)
Comment 5 ahangarha 2020-12-09 18:36:28 UTC
Once more I experienced this issue. This time I tried to add event on 5th January for 19:00-21:15 UTC (my timezone is +3:30)

Not only the event didn't render properly on screen but also I noticed (like last time) that even after removing the event, korganize cannot get synced with my NextCloud account.
Comment 6 Bug Janitor Service 2020-12-10 19:20:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/13
Comment 7 gjditchfield 2020-12-12 21:17:50 UTC
Git commit 710794ae1e3d747d36ac6ac559aaa6f2f063e02b by Glen Ditchfield.
Committed on 12/12/2020 at 19:02.
Pushed by gditchfield into branch 'release/20.12'.

Fix display of multi-day events from non-local time zones

If an event is in a non-local time zone, and extends past midnight in the
local time zone but not in its own time zone, the agenda view miscalculates
the number of day columns that it should display the event in.

M  +1    -1    src/agenda/agendaview.cpp

https://invent.kde.org/pim/eventviews/commit/710794ae1e3d747d36ac6ac559aaa6f2f063e02b