Fix display of multi-day events from non-local time zones

If an event is in a non-local time zone, and extends past midnight in the
local time zone but not in its own time zone, the agenda view miscalculates
the number of day columns that it should display the event in.

BUG: 429007